--- a/style.css
+++ b/style.css
@@ -1,247 +1,41 @@
-.parent {
+body {
+    box-sizing: border-box;
+    background-color: #eee;
+    color: #555;
+  }
+  
+  .container {
+    max-width: 860px;
+    margin: 0 auto;
+    padding: 1rem;
+    text-align: center;
+    background-color: #fff;
+    border-radius: 0.5em;
+  }
+  
+  header > h1 {
+    margin-top: 0;
+    font-family: 'Catamaran', sans-serif;
+    font-size: 2.5rem;
+    border-bottom: 1px solid #eee;
+  }
+  
+  .gallery {
     display: grid;
-    grid-template-columns: repeat(4, 0.5fr);
-    grid-template-rows: repeat(15, 1fr);
-    grid-gap: 10px;
-     justify-items: center;
-    /* Centra horizontalmente los elementos */
-    align-items: center;
-    /* Centra verticalmente los elementos */
-}
-
-.div1 {
-    grid-area: 1/2/2/3
-}
-
-.div2 {
-    grid-area: 1/3/2/4
-}
-
-.div3 {
-    grid-area: 1/4/2/5
-}
-
-.div4 {
-    grid-area: 2/2/3/3
-}
-
-.div5 {
-    grid-area: 2/3/3/4
-}
-
-.div6 {
-    grid-area: 2/4/3/5
-}
-
-/* Repetir para los divs 7 al 58 */
-.div7 {
-    grid-area: 3/2/4/3
-}
-
-.div8 {
-    grid-area: 3/3/4/4
-}
-
-.div9 {
-    grid-area: 3/4/4/5
-}
-
-.div10 {
-    grid-area: 4/2/5/3
-}
-
-.div11 {
-    grid-area: 4/3/5/4
-}
-
-.div12 {
-    grid-area: 4/4/5/5
-}
-
-.div13 {
-    grid-area: 5/2/6/3
-}
-
-.div14 {
-    grid-area: 5/3/6/4
-}
-
-.div15 {
-    grid-area: 5/4/6/5
-}
-
-/* Repetir para los divs 16 al 58 */
-.div16 {
-    grid-area: 6/2/7/3
-}
-
-.div17 {
-    grid-area: 6/3/7/4
-}
-
-
-
-/* Continuar para los demás divs */
-.div18 {
-    grid-area: 6/4/7/5
-}
-
-.div19 {
-    grid-area: 7/2/8/3
-}
-
-.div20 {
-    grid-area: 7/3/8/4
-}
-
-.div21 {
-    grid-area: 7/4/8/5
-}
-
-.div22 {
-    grid-area: 8/2/9/3
-}
-
-.div23 {
-    grid-area: 8/3/9/4
-}
-
-.div24 {
-    grid-area: 8/4/9/5
-}
-
-.div25 {
-    grid-area: 9/2/10/3
-}
-
-.div26 {
-    grid-area: 9/3/10/4
-}
-
-.div27 {
-    grid-area: 9/4/10/5
-}
-
-.div28 {
-    grid-area: 10/2/11/3
-}
-
-.div29 {
-    grid-area: 10/3/11/4
-}
-
-.div30 {
-    grid-area: 10/4/11/5
-}
-
-.div31 {
-    grid-area: 11/2/12/3
-}
-
-.div32 {
-    grid-area: 11/3/12/4
-}
-
-.div33 {
-    grid-area: 11/4/12/5
-}
-
-.div34 {
-    grid-area: 12/2/13/3
-}
-
-.div35 {
-    grid-area: 12/3/13/4
-}
-
-.div36 {
-    grid-area: 12/4/13/5
-}
-
-.div37 {
-    grid-area: 13/2/14/3
-}
-
-.div38 {
-    grid-area: 13/3/14/4
-}
-
-.div39 {
-    grid-area: 13/4/14/5
-}
-
-.div40 {
-    grid-area: 14/2/15/3
-}
-
-.div41 {
-    grid-area: 14/3/15/4
-}
-
-.div42 {
-    grid-area: 14/4/15/5
-}
-
-.div43 {
-    grid-area: 15/2/16/3
-}
-
-.div44 {
-    grid-area: 15/3/16/4
-}
-
-.div45 {
-    grid-area: 15/4/16/5
-}
-
-.div46 {
-    grid-area: 16/2/17/3
-}
-
-.div47 {
-    grid-area: 16/3/17/4
-}
-
-.div48 {
-    grid-area: 16/4/17/5
-}
-
-.div49 {
-    grid-area: 17/2/18/3
-}
-
-.div50 {
-    grid-area: 17/3/18/4
-}
-
-.div51 {
-    grid-area: 17/4/18/5
-}
-
-.div52 {
-    grid-area: 18/2/19/3
-}
-
-.div53 {
-    grid-area: 18/3/19/4
-}
-
-.div54 {
-    grid-area: 18/4/19/5
-}
-
-.div55 {
-    grid-area: 19/2/20/3
-}
-
-.div56 {
-    grid-area: 19/3/20/4
-}
-
-.div57 {
-    grid-area: 19/4/20/5
-}
-
-.div58 {
-    grid-area: 20/2/21/3
-}
+    margin: 3em 0;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: 1fr;
+    grid-gap: 1em;
+    grid-auto-flow: dense;
+  }
+  
+  figure {
+    display: flex;
+    margin: 0;
+  }
+  
+  img {
+    flex: 1;
+    max-width: 100%;
+    object-fit: cover;
+  }
