--- a/style.css
+++ b/style.css
@@ -1,41 +1,104 @@
 body {
-    box-sizing: border-box;
-    background-color: #eee;
-    color: #555;
-  }
+  background-color: #3bb2b8;
+  background: linear-gradient(
+    25deg,
+    rgba(66, 230, 149, 1),
+    rgba(66, 32, 149, 1)
+  );
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  font-family: "Open Sans", sans-serif;
+}
+.container {
+  max-width: 800px;
+  margin: 5% auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-sizing: border-box;
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.4);
   
-  .container {
-    max-width: 860px;
-    margin: 0 auto;
-    padding: 1rem;
-    text-align: center;
-    background-color: #fff;
-    border-radius: 0.5em;
+}
+
+.text-center {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.lightbox-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.lightbox-gallery div > img {
+  max-width: 100%;
+  display: block;
+  transition:all 1s ease;
+}
+
+.lightbox-gallery div {
+  margin: 10px;
+  flex-basis: 180px;
+}
+
+@media only screen and (max-width: 480px) {
+  .lightbox-gallery {
+    flex-direction: column;
+    align-items: center;
   }
-  
-  header > h1 {
-    margin-top: 0;
-    font-family: 'Catamaran', sans-serif;
-    font-size: 2.5rem;
-    border-bottom: 1px solid #eee;
+
+  .lightbox > div {
+    margin-bottom: 10px;
   }
-  
-  .gallery {
-    display: grid;
-    margin: 3em 0;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-template-rows: 1fr;
-    grid-gap: 1em;
-    grid-auto-flow: dense;
-  }
-  
-  figure {
-    display: flex;
-    margin: 0;
-  }
-  
-  img {
-    flex: 1;
-    max-width: 100%;
-    object-fit: cover;
-  }
+}
+
+/*Lighbox CSS*/
+
+.lightbox {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  padding-top: 30px;
+  box-sizing: border-box;
+}
+
+.lightbox img {
+  display: block;
+  margin: auto;
+}
+
+.lightbox .caption {
+  margin: 15px auto;
+  width: 50%;
+  text-align: center;
+  font-size: 1em;
+  line-height: 1.5;
+  font-weight: 700;
+  color: #eee;
+}
+
+.github-link {
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.github-link:hover,
+.github-link:active,
+.github-link:visited {
+  color: #fff;
+  text-decoration: none;
+}
+
+img:hover {
+  transform: scale(1.5);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.496);
+}
+
